<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.constraint.utils.ImageFilterView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:brightness="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            tools:srcCompat="@tools:sample/avatars"
            />

    <SeekBar
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:max="100"
            android:progress="0"
            android:id="@+id/seekBar"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewWarmth"/>

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/seekBarContrast"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintStart_toEndOf="@+id/textViewContrast"/>

    <TextView
            android:text="@string/contrast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContrast"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/seekBarContrast"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarContrast"/>

    <TextView
            android:text="@string/saturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSaturation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/seekBarWarmth"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarWarmth"/>

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/seekBarWarmth"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewSaturation"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBarContrast"/>

    <TextView
            android:text="@string/warmth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWarmth"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

</android.support.constraint.ConstraintLayout>